Moved jump-to bar outside of chatbox and no longer fixed. DRY'd up command process code.

--- a/app/styles/partials/_twitch-chat.scss
+++ b/app/styles/partials/_twitch-chat.scss
@@ -1,4 +1,5 @@
 .twitch-chat {
+  position: relative;
   width: 100%;
 
   .fa-star, .fa-star-o:hover,
@@ -15,7 +16,7 @@
     margin-top: 6px;
 
     input {
-      width: 100%;
+      width: 99%;
     }
 
     .emoji-selector {
@@ -25,28 +26,20 @@
     }
   }
 
-  .jump-to-last-read {
-    position: fixed;
-    margin-top: -13px;
-    width: 505px;
+  // jump-to bars
+  .jump-to-last-read, .jump-to-new {
+    width: 99%;
     background: #333;
     color: #fff;
     cursor: pointer;
     text-align: center;
     text-transform: uppercase;
     font-size: 11px;
-  }
+    border-radius: 3px;
 
-  .jump-to-new {
-    // position: fixed;
-    // margin-top: -13px;
-    width: 505px;
-    background: #333;
-    color: #fff;
-    cursor: pointer;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 11px;
+    &:hover {
+      background: #444;
+    }
   }
 
   .chatbox {
